Changed nav background to test again whether the nav section is causing the gap issues on mobile devices.

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -46,7 +46,8 @@ html {
     order: 2; } }
 #nav {
   justify-content: flex-start;
-  background: transparent; }
+  background: transparent;
+  background: red; }
   #nav .nav-collapse {
     background: #b1b0b0;
     border: 2px solid black;
@@ -63,15 +64,20 @@ html {
   #nav .nav-items {
     height: 62.5%;
     width: 90%;
+    margin-top: 10px;
+    margin-bottom: 2.5px;
     background: black;
     border-radius: 5px; }
     #nav .nav-items a {
+      margin: 5px 0;
       font-size: 1.5rem;
       color: white;
       text-decoration: none; }
       #nav .nav-items a:hover {
         color: #00a2ff;
         font-size: 1.75rem; }
+      #nav .nav-items a i {
+        margin: 0 2.5px; }
   #nav .hide {
     opacity: 0;
     transition: 0.5s opacity linear 0.25s; }
@@ -90,19 +96,22 @@ html {
   #nav .nav-collapse i {
     font-size: 1rem; }
   #nav .nav-items a {
-    font-size: 1rem; }
+    font-size: 1rem;
+    margin: 3.5px 0; }
     #nav .nav-items a:hover {
       font-size: 1.25rem; } }
 @media only screen and (max-height: 380px) {
   #nav .nav-items a {
-    font-size: 0.8rem; }
+    font-size: 0.8rem;
+    margin: 3px 0; }
     #nav .nav-items a:hover {
       font-size: 1rem; } }
 @media only screen and (max-height: 300px) {
   #nav .nav-items {
     width: 50%; }
     #nav .nav-items a {
-      font-size: 0.6rem; }
+      font-size: 0.6rem;
+      margin: 2px 0; }
       #nav .nav-items a:hover {
         font-size: 0.8rem; } }
 @media only screen and (min-width: 768px) {
@@ -117,10 +126,12 @@ html {
       align-items: flex-end;
       height: 100%;
       width: 100%;
+      margin: 0;
       background: transparent; }
       #nav .nav-items a {
         display: block;
         position: relative;
+        margin: 0px 10px;
         padding: 10px 10px;
         cursor: pointer; }
         #nav .nav-items a:hover {
