--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -2,6 +2,7 @@
   @extend %column-flex-settings;
   justify-content: flex-start;
   background: transparent;
+  background: red;
 
   .nav-collapse {
     background: $grey;
@@ -30,13 +31,13 @@
     @extend %column-flex-settings;
     height: 62.5%;
     width: 90%;
-    // margin-top: 10px;
-    // margin-bottom: 2.5px;
+    margin-top: 10px;
+    margin-bottom: 2.5px;
     background: $black;
     border-radius: 5px;
 
     a {
-      // margin: 5px 0;
+      margin: 5px 0;
       font-size: 1.5rem;
       color: $white;
       text-decoration: none;
@@ -47,7 +48,7 @@
       }
 
       i {
-        // margin: 0 2.5px;
+        margin: 0 2.5px;
       }
     }
   }
@@ -92,7 +93,7 @@
     .nav-items {
       a {
         font-size: 1rem;
-        // margin: 3.5px 0;
+        margin: 3.5px 0;
 
         &:hover {
           font-size: 1.25rem;
@@ -107,7 +108,7 @@
     .nav-items {
       a {
         font-size: 0.8rem;
-        // margin: 3px 0;
+        margin: 3px 0;
 
         &:hover {
           font-size: 1rem;
@@ -123,7 +124,7 @@
       width: 50%;
       a {
         font-size: 0.6rem;
-        // margin: 2px 0;
+        margin: 2px 0;
 
         &:hover {
           font-size: 0.8rem;
@@ -148,13 +149,13 @@
       align-items: flex-end;
       height: 100%;
       width: 100%;
-      // margin: 0;
+      margin: 0;
       background: transparent;
 
       a {
         display: block;
         position: relative;
-        // margin: 0px 10px;
+        margin: 0px 10px;
         padding: 10px 10px;
         cursor: pointer;
 
